# TarsRust

./: .gitignore  Cargo.toml  README.md  README_zh.md
examples/: client.rs
examples/hello/: Hello.tars  HelloServer.conf  HelloWorldImp.go  go.mod  go.sum  main.go  test_client.go
examples/hello/tars-protocol/Hello/: HelloWorld.tars.go
src/: lib.rs
src/adapter/: mod.rs
src/application/: mod.rs
src/codec/: buffer.rs  mod.rs  reader.rs  types.rs
src/communicator/: mod.rs
src/endpoint/: mod.rs
src/filter/: mod.rs
src/logger/: mod.rs
src/protocol/: consts.rs  logf.rs  mod.rs  packet.rs  queryf.rs  statf.rs
src/registry/: mod.rs
src/selector/: consistenthash.rs  mod.rs  modhash.rs  random.rs  roundrobin.rs  weight.rs
src/servant/: mod.rs
src/stat/: mod.rs
src/transport/: client.rs  config.rs  mod.rs  server.rs  simple_client.rs  tls.rs
src/util/: config.rs  context.rs  mod.rs
